Fixed footer copyrights on mobile devices

--- a/www/wp-content/themes/soam/scss/layout/footer.scss
+++ b/www/wp-content/themes/soam/scss/layout/footer.scss
@@ -101,5 +101,9 @@ footer {
         margin-top: 1rem;
       }
     }
+
+    .copyrights {
+      padding: 0 24px;
+    }
   }
 }
